--- a/index.html
+++ b/index.html
@@ -259,6 +259,15 @@
     .auth-container button:hover { background: #ffdb4d; }
     .auth-container p { margin-top: 15px; }
     .auth-container a { color: var(--accent-color); text-decoration: none; }
+    /* Forgot Password Link */
+    .forgot-link {
+      font-size: 0.9em;
+      margin-top: 5px;
+      display: block;
+      color: var(--accent-color);
+      text-decoration: underline;
+      cursor: pointer;
+    }
   </style>
   <!-- Include Supabase JS client from CDN -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
@@ -271,6 +280,7 @@
       <input type="email" id="auth-email" placeholder="Email">
       <input type="password" id="auth-password" placeholder="Password">
       <button id="authActionButton" onclick="authAction(event)">Login</button>
+      <span class="forgot-link" onclick="forgotPassword(event)">Forgot Password?</span>
       <p id="authToggleText">
         Don't have an account? <a href="#" onclick="toggleAuthMode()">Sign Up</a>
       </p>
@@ -368,7 +378,7 @@
   <script type="module">
     // Supabase configuration
     const SUPABASE_URL = "https://skpaziktshkxohlmdnwk.supabase.co";
-    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InNrcGF6aWt0c2hreG9obG1kbndrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDAxNTgwNTgsImV4cCI6MjA1NTczNDA1OH0.ihJvl6TZLh7CWpM9uagQtAJ5ix4igOF9nk_d2lukrmE";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJIUzI1NiIsInJlZiI6InNrcGF6aWt0c2hreG9obG1kbndrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDAxNTgwNTgsImV4cCI6MjA1NTczNDA1OH0.ihJvl6TZLh7CWpM9uagQtAJ5ix4igOF9nk_d2lukrmE";
     const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     // Global Variables
@@ -663,15 +673,28 @@
           console.error("Sign Up error:", error);
           alert("Sign Up failed: " + error.message);
         } else {
-          // Show a success message for new users.
           alert("Sign up successful! You can now use the checklist.");
           currentUser = data.user;
-          // Insert an empty record for the new user.
           const { error: insertError } = await supabaseClient
             .from("user_data")
             .insert([{ user_id: currentUser.id, classes_data: [] }]);
           if (insertError) console.error("Insert error:", insertError);
         }
+      }
+    }
+    async function forgotPassword(e) {
+      e.preventDefault();
+      const email = document.getElementById("auth-email").value;
+      if (!email) {
+        alert("Please enter your email address.");
+        return;
+      }
+      const { error } = await supabaseClient.auth.resetPasswordForEmail(email);
+      if (error) {
+        console.error("Reset password error:", error);
+        alert("Failed to send reset password email: " + error.message);
+      } else {
+        alert("Password reset email sent! Please check your inbox.");
       }
     }
     async function logoutUser(e) {
@@ -718,10 +741,8 @@
     // Expose functions for inline event handlers
     window.toggleAuthMode = toggleAuthMode;
     window.authAction = authAction;
-    window.googleSignIn = googleSignIn; // This function has been removed as per request.
-    window.loginUser = loginUser;
-    window.signupUser = signupUser;
     window.logoutUser = logoutUser;
+    window.forgotPassword = forgotPassword;
     window.toggleTheme = toggleTheme;
     window.openClassModal = openClassModal;
     window.closeClassModal = closeClassModal;
